# smoothing_spline

./: .gitignore  GEMINI.md  README.md  benchmark_breakdown.py  bike.py  compare_R.html  compare_R.ipynb  compare_cpp.html  compare_scipy.html  index.html  meson.build  objects.inv  pyproject.toml  searchindex.js  setup.py
.doctrees/: compare_R.doctree  compare_cpp.doctree  compare_scipy.doctree  environment.pickle
.doctrees/nbsphinx/: compare_R.ipynb  compare_cpp.ipynb
.github/workflows/: deploy.yml  docs.yml  tests.yml  wheels.yml
_sources/: compare_R.ipynb.txt  compare_scipy.ipynb.txt
docs/: ._config.yml.bak  ._toc.yml.bak  .gitignore  compare_R.ipynb  compare_R.md  compare_cpp.md  compare_loess.md  compare_scipy.md  conf.py  index.md  myst.yml  theory.md
scatter_smooth/: __init__.py  datasets.py  loess.py  splines.py
smoothing_spline/: __init__.py  datasets.py  estimator.py  fitter.py  lowess.py  smoothing_spline.py
src/: bspline.cpp  bspline.h  loess.cpp  loess.h  main.cpp  natural_spline.cpp  natural_spline.h  reinsch.cpp  reinsch.h  spline_basis.cpp  utils.cpp  utils.h
tests/: spline_fitter.py  takahashi_trace.py  test_bspline_fitter.py  test_bspline_matrices.py  test_compare_loess_cpp.py  test_cpp_basis.py  test_cpp_derivatives.py  test_cpp_fitter.py  test_cpp_penalty.py  test_cpp_reinsch.py  test_derivatives.py  test_df_match.py  test_fitter.py  test_lowess.py  test_smoothing_spline.py  test_spline_trace.py  test_takahashi.py  test_takahashi.py~  test_weighted_spline_trace.py  weighted_spline_trace.py
