[project]
name = "smoothing_spline"
dynamic = ["version"]
authors = [
  {name="Jonathan Taylor", email="jonathan.taylor.stanford@gmail.com"},
]
description = "Minimal Smoothing Spline Fitter. Provides an scikit-learn estimator"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["statistical learning", "spline", "smoothing", "non-parametric"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "rpy2",
    "scipy",
]
doc = [
    "myst-parser",
    "jupyter-book",
    "pandas",
    "matplotlib",
    "rpy2"
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
smoothing_spline = ["data/*.csv"]

[tool.setuptools_scm]
write_to = "smoothing_spline/_version.py"