[project]
name = "smoothing_spline"
dynamic = ["version"]
authors = [
  {name="Jonathan Taylor", email="jonathan.taylor.stanford@gmail.com"},
]
description = "Minimal Smoothing Spline Fitter. Provides an scikit-learn estimator"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["statistical learning", "spline", "smoothing", "non-parametric"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "rpy2",
    "scipy",
    "matplotlib",
    "pandas"
]
doc = [
    "myst-parser",
    "jupyter-book",
    "pandas",
    "matplotlib",
    "rpy2"
]

[build-system]
requires = ["meson-python>=0.13.1", "pybind11", "ninja", "patchelf; platform_system == 'Linux'", "setuptools_scm[toml]>=6.2"]
build-backend = "mesonpy"

[tool.setuptools_scm]
write_to = "smoothing_spline/_version.py"